# VirtualizationCoreApi

./: CMakeLists.txt  README.md  README.txt  grpc函数参数表.xlsx
include/: Global.h  libvbox_vboxsdk_version.h  vca_core.h  vca_event.h  vca_intType.h  vca_threadPool.h  vca_toCode.h  vca_type.h  vca_vmConfigure.h
lib/libvbox-6.0.10/lib/: guestfileevent.cpp
lib/libvbox-6.0.10/sdk/bindings/c/glue/: VBoxCAPIGlue.c  VBoxCAPIGlue.h
lib/libvbox-6.0.10/sdk/bindings/c/include/: VBoxCAPI_v6_0.h
lib/libvbox-6.0.10/sdk/bindings/c/samples/: Makefile  tstCAPIGlue.c
lib/libvbox-6.0.10/sdk/bindings/glue/java/: TestVBox.java
lib/libvbox-6.0.10/sdk/bindings/mscom/idl/: VirtualBox.idl
lib/libvbox-6.0.10/sdk/bindings/mscom/include/: VirtualBox.h
lib/libvbox-6.0.10/sdk/bindings/mscom/lib/: VirtualBox.tlb  VirtualBox_i.c
lib/libvbox-6.0.10/sdk/bindings/mscom/samples/: Makefile  tstVBoxAPIWin.cpp
lib/libvbox-6.0.10/sdk/bindings/xpcom/idl/: VirtualBox_XPCOM.idl
lib/libvbox-6.0.10/sdk/bindings/xpcom/include/: VirtualBox_XPCOM.h  ipcIClientObserver.h  ipcIDConnectService.h  ipcILockService.h  ipcIMessageObserver.h  ipcIService.h  ipcITransactionObserver.h  nsIArray.h  (+84 more)
lib/libvbox-6.0.10/sdk/installer/vboxapi/: __init__.py
monitor/: Readme.txt  a.out  cpu_pressure.py  cpu_temperature.py  disk_io.py  disk_rate.py  hardware.py  memory_rate.py  net_count.py  net_info.py  range_load.py  swap_rate.py  up_time.py  vca_monitorHook.cpp  vca_monitorHook.h
murder/: data  p2p_command.py  vca_murderHook.cpp  vca_murderHook.h
protocol/: compile.sh  protocolCMakeLists.txt  qigrpc.grpc.pb.cc  qigrpc.grpc.pb.h  qigrpc.pb.cc  qigrpc.pb.h  qigrpc.proto  vca_controller.cpp  vca_controller.h  vca_enummethod.h  vca_handleType.h  vca_service.cpp  vca_service.h  vca_threadpool.h
source/: Readme  rdpserver  vca_core.cpp  vca_event.cpp  vca_main.cpp  vca_toCode.cpp  vca_vmConfigure.cpp
(+14 files in other folders)
